--- a/README
+++ b/README
@@ -95,6 +95,7 @@ JAIN-SIP: Joint Spec Leads -- Phelim O'Doherty (BEA) and M. Ranganathan (NIST).
 JAIN-SDP: The SDP API spec lead is Kelvin Porter from Cisco.
 
 Sample Sequence diagram on how a request is processed:
+
 ![Alt text](http://g.gravizo.com/g?
 @startuml;
 autonumber;
@@ -103,7 +104,6 @@ boundary UDPMessageProcessor;
 control UDPMessageChannel;
 control NISTSIPMessageHandImpl;
 control EventScanner;
-
 legend left;
   Handling incoming UDP request;
 endlegend;
@@ -133,7 +133,29 @@ EventScanner -> SIPListener : processRequest;
 deactivate EventScanner;
 deactivate NISTSIPMessageHandImpl;
 deactivate UDPMessageChannel;
-@enduml;
+@enduml
+)
+
+
+![Alt text](http://g.gravizo.com/g?
+@startuml;
+actor User;
+participant "First Class" as A;
+participant "Second Class" as B;
+participant "Last Class" as C;
+User -> A: DoWork;
+activate A;
+A -> B: Create Request;
+activate B;
+B -> C: DoWork;
+activate C;
+C --> B: WorkDone;
+destroy C;
+B --> A: Request Created;
+deactivate B;
+A --> User: Done;
+deactivate A;
+@enduml
 )
 
 Implementation Lead:
